testdata/baselines/reference/submodule/compiler/taggedTemplatesWithIncompleteTemplateExpressions5.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2318: Cannot find global type 'TemplateStringsArray'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
taggedTemplatesWithIncompleteTemplateExpressions5.ts(1,15): error TS2304: Cannot find name 'TemplateStringsArray'.
taggedTemplatesWithIncompleteTemplateExpressions5.ts(5,30): error TS2554: Expected 3 arguments, but got 4.
taggedTemplatesWithIncompleteTemplateExpressions5.ts(5,30): error TS1109: Expression expected.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2318: Cannot find global type 'TemplateStringsArray'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== taggedTemplatesWithIncompleteTemplateExpressions5.ts (3 errors) ====
    function f(x: TemplateStringsArray, y: string, z: string) {
                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'TemplateStringsArray'.
    }
    
    // Incomplete call, but too many parameters.
    f `123qdawdrqw${ 1 }${ 2 }${ 
                                 
!!! error TS2554: Expected 3 arguments, but got 4.
                                 
!!! error TS1109: Expression expected.